tests/invalid/definite/Subtype_CompileFail_3.whiley
define int where $ > 0 as scf3nat

void System::main([string] args):
    [scf3nat] x = [1]
    x[0] = -1
    
